# test_bot

./: Makefile  pyproject.toml
example_bot/: starter.py
example_bot/bot/: bot.py
example_bot/listener/: listener.py
example_bot/parser/: parser.py
example_bot/utils/: blacklist.json  config.json  constants.py  file_handler.py  subs.json
