[tool.poetry]
name = "example-bot"
version = "0.1.0"
description = ""
authors = ["Addavriance <addavriance@mail.ru>"]
readme = "README.md"
packages = [{include = "example_bot"}]

[tool.poetry.dependencies]
python = "^3.10.10"
aiogram = "^2.25.1"
asyncio = "^3.4.3"
requests = "^2.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
